test/rbkt/Queries/zorba/error/error1.spec
Error: http://www.w3.org/2005/xqt-errors:FOER0000
